--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1891,7 +1891,12 @@ body[data-theme='light'] .hero__content {
   align-items: center;
   justify-content: center;
   opacity: 1;
-  transition: opacity 0.6s ease 1.6s;
+  transition: opacity 0.5s ease 0.4s;
+  pointer-events: none;
+}
+
+body.animation-loading.animation-ready .site-preloader {
+  opacity: 0;
   pointer-events: none;
 }
 
