--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -98,6 +98,7 @@ body.animation-complete .site-main {
   padding: 0 24px;
   box-sizing: border-box;
   opacity: 0;
+  isolation: isolate;
   transition: opacity 0.6s ease 2.6s;
 }
 
@@ -2168,7 +2169,7 @@ body.animation-complete .site-preloader {
   pointer-events: none;
   z-index: 9999;
   transform: translate(-50%, -50%);
-  mix-blend-mode: difference;
+  mix-blend-mode: normal;
 }
 
 .target-cursor__dot {
