Added a new page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           </a>
           <span class="glass-nav__divider" aria-hidden="true"></span>
           <nav class="glass-nav__links" aria-label="Site sections">
-            <a href="{{ '/#about' | relative_url }}" data-cursor-target>about</a>
+            <a href="{{ '/about/' | relative_url }}" data-cursor-target>about</a>
             <a href="{{ '/#portfolio' | relative_url }}" data-cursor-target>portfolio</a>
             <a href="{{ '/resume/' | relative_url }}" data-cursor-target>resume</a>
             <a href="{{ '/#contact' | relative_url }}" data-cursor-target>contact</a>
