--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
     <div class="project-modal" id="projectModal">
       <div class="modal-overlay"></div>
       <div class="modal-content">
-        <button class="modal-close" id="modalClose">&times;</button>
+        <button type="button" class="modal-close" id="modalClose" aria-label="Close project details">&times;</button>
         <div class="modal-thumbnail" id="modalThumbnail">
           <img src="{{ '/assets/img/logo.png' | relative_url }}" data-placeholder="{{ '/assets/img/logo.png' | relative_url }}" alt="Project thumbnail" id="modalThumbnailImg" />
         </div>
